# progettoDevOps_step2

./: CMakeLists.txt  ReadMe_Progetto_step2.rtf  job.sh  singularity
.github/: workflows_CI.yml
.github/workflows/: Automation_step3.yml  workflow_CI_CD.yml
test/: test_matrix_multiplication.cpp
